搭建好组件化架构

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,13 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+#最小SDK版本
+MIN_SDK_VERSION = 15
+#当前SDK版本
+TARGET_SDK_VERSION = 28
+#CompileSDK版本
+COMPILE_SDK_VERSION = 28
+#各个模块能否单独运行flag
+LOGIN_IS_APP = false
+PERSONAL_IS_APP = false
