ARouter组件间跳转功能初步完成

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':login', ':personal', ':arouter'
+include ':app', ':login', ':personal', ':arouter', ':annotations', ':annotation_compiler'
