--- a/annotation_compiler/build.gradle
+++ b/annotation_compiler/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
+    implementation 'com.squareup:javapoet:1.11.1'
     implementation project(':annotations')
 }
 
